# AF2_GPCR_Kinase

./: .gitignore  README.md  pyproject.toml
AF2_GPCR_Kinase/scripts/: mmseqs2.py  predict.py  util.py
scripts/: colabfold_alphafold.py  mmseqs2.py  predict.py  util.py
