[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "AF2_GPCR_Kinase"
version = "0.1"
description = ""
authors = [{name = "Diego del Alamo"}, {name = "Davide Sala", email = "d.sala1388@gmail.com"}]
readme = "README.md"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
]
requires-python = ">=3.6"
dependencies = ["numpy", "absl-py", "Requests"]
